Greatly improve mobile layout and make sizes and spacing more consistent

--- a/src/sections/AboutSection/AboutSection.module.scss
+++ b/src/sections/AboutSection/AboutSection.module.scss
@@ -5,9 +5,10 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 1rem;
   @include m.section-dimensions;
-  background-color: blue;
-
+  width: 50%;
+  margin: 0 auto;
   @include m.color-transition;
 }
 
@@ -17,4 +18,18 @@
 
 .about-dark {
   @include m.dark-theme-template;
+}
+
+@media (max-width: 1200px) {
+  .about {
+    width: 75%;
+    margin: 0 auto;
+  }
+}
+
+@media (max-width: 768px) {
+  .about {
+    width: 85%;
+    margin: 0 auto;
+  }
 }
