--- a/src/components/Paragraph/Paragraph.module.scss
+++ b/src/components/Paragraph/Paragraph.module.scss
@@ -2,12 +2,14 @@
 @use "../../partials/mixins" as m;
 
 .paragraph {
-  width: 50%;
-  margin-bottom: 1rem;
   text-align: center;
+  margin-bottom: 1rem;
   font-size: 1.5rem;
-
   @include m.color-transition;
+
+  // &:not(:last-of-type) {
+  //   margin-bottom: 1rem;
+  // }
 }
 
 .paragraph-dark {
@@ -20,7 +22,6 @@
 
 @media (max-width: 768px) {
   .paragraph {
-    width: 75%;
     font-size: 1.25rem;
   }
 }
