--- a/src/components/FormField/FormField.module.scss
+++ b/src/components/FormField/FormField.module.scss
@@ -51,3 +51,17 @@
 .field-large {
   height: 250px;
 }
+
+@media (max-height: 850px) {
+  .label {
+    font-size: 1.2rem;
+  }
+  .field {
+    height: 2rem;
+    padding: 8px 13px;
+    font-size: 0.8rem;
+  }
+  .field-large {
+    height: 200px;
+  }
+}
