--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -87,3 +87,12 @@
   width: 100%;
   height: 100%;
 }
+
+@media (max-height: 850px) {
+  .title {
+    font-size: 1rem;
+  }
+  .inner-content {
+    gap: 0.5rem;
+  }
+}
