Add smooth transitions to colors when changing theme

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -1,4 +1,5 @@
 @use "./partials/variables" as v;
+@use "./partials/mixins" as m;
 
 .app {
   position: relative;
@@ -10,10 +11,14 @@
 
 .app-dark {
   background-color: v.$primary-color-dark;
+
+  @include m.color-transition;
 }
 
 .app-light {
   background-color: v.$primary-color-light;
+
+  @include m.color-transition;
 }
 
 .app-scrollable {
