--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -16,3 +16,6 @@ $accent-color: #fff44f;
 // sizes
 $skill-box-icon-size: 2rem;
 $skill-box-icon-size-small: 1.5rem;
+
+// durations
+$theme-toggle-transition-duration: 550ms;
