--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -23,10 +23,10 @@
   }
 }
 
-@media (max-height: 850px) {
+@media (max-width: 768px) and (max-height: 850px) {
   .projects {
-    grid-template-columns: minmax(auto, 210px);
-
+    grid-template-columns: 30vh;
+    gap: 1rem;
     margin: 2.5rem auto;
   }
 }
