--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -88,7 +88,7 @@
   height: 100%;
 }
 
-@media (max-height: 850px) {
+@media (max-width: 420px), (max-height: 850px) {
   .title {
     font-size: 1rem;
   }
