Add height-based media queries to components and improve responsive layout of skillboxes

--- a/src/components/SectionHeading/SectionHeading.module.scss
+++ b/src/components/SectionHeading/SectionHeading.module.scss
@@ -9,7 +9,7 @@
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px), (max-height: 850px) {
   .heading {
     width: 85%;
     font-size: 2.5rem;
