--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -16,6 +16,7 @@ $accent-color: #fff44f;
 // sizes
 $skill-box-icon-size: 2rem;
 $skill-box-icon-size-small: 1.5rem;
+$skill-box-icon-size-smallest: 1.2rem;
 
 // durations
 $theme-toggle-transition-duration: 550ms;
