--- a/src/components/Subheading/Subheading.module.scss
+++ b/src/components/Subheading/Subheading.module.scss
@@ -5,12 +5,12 @@
 
 @media (max-width: 1200px) {
   .subheading {
-    font-size: 2.5rem;
+    font-size: 2.25rem;
   }
 }
 
-@media (max-width: 768px) {
+@media (max-width: 768px), (max-height: 850px) {
   .subheading {
-    font-size: 2rem;
+    font-size: 1.5rem;
   }
 }
