--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -124,7 +124,7 @@
   }
 }
 
-@media (max-width: 768px), (max-height: 850px) {
+@media (max-width: 768px) and (max-height: 850px) {
   .button {
     transform: translate(-50%, -50%);
     max-width: 10rem;
@@ -137,11 +137,18 @@
     font-size: 1rem;
   }
   .button-container-resizeable {
-    width: 100%;
-    height: 100%;
     font-size: 0.6rem;
   }
   .button-resizeable {
     font-size: 0.6rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .button-container-resizeable {
+    font-size: max(0.6rem, min(1.5vw, 1.2rem));
+  }
+  .button-resizeable {
+    font-size: max(0.6rem, min(1.5vw, 1.2rem));
   }
 }
