--- a/src/components/ContactForm/ContactForm.module.scss
+++ b/src/components/ContactForm/ContactForm.module.scss
@@ -7,7 +7,7 @@
   opacity: 0;
   transform: translateY(5rem);
 
-  transition: opacity 800ms ease, transform 800ms ease;
+  transition: opacity 800ms linear, transform 800ms ease;
 
   > :nth-last-child(2) {
     margin-bottom: 2rem;
