--- a/src/components/Paragraph/Paragraph.module.scss
+++ b/src/components/Paragraph/Paragraph.module.scss
@@ -6,10 +6,15 @@
   margin-bottom: 1rem;
   font-size: 1.5rem;
   @include m.color-transition;
+  opacity: 0;
+  transform: translateX(-10rem);
 
-  // &:not(:last-of-type) {
-  //   margin-bottom: 1rem;
-  // }
+  transition: opacity 800ms linear, transform 800ms ease;
+}
+
+.paragraph-visible {
+  opacity: 1;
+  transform: translateX(0);
 }
 
 .paragraph-dark {
