--- a/src/components/SectionHeading/SectionHeading.module.scss
+++ b/src/components/SectionHeading/SectionHeading.module.scss
@@ -1,6 +1,13 @@
 .heading {
   font-size: 4rem;
   text-align: center;
+  opacity: 0;
+
+  transition: opacity 800ms linear;
+}
+
+.heading-visible {
+  opacity: 1;
 }
 
 @media (max-width: 1200px) {
