Refactor intersectionObserver code
Remove forwardRef and move hook calls into specific components. Pass props to them for startingPos, isVisible, and setIsVisible. This gives each component control over its own transition animation while ensuring that their timings are all in sync with each other.

--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -22,7 +22,16 @@
     opacity 800ms linear, transform 800ms ease;
 }
 
-.button-container-start-right {
+.button-container-up {
+  transform: translateY(-10rem);
+}
+.button-container-down {
+  transform: translateY(10rem);
+}
+.button-container-left {
+  transform: translateX(-10rem);
+}
+.button-container-right {
   transform: translateX(10rem);
 }
 
