--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -15,35 +15,40 @@
   font-size: 1.2rem;
   overflow: hidden;
   box-sizing: content-box;
-  opacity: 0;
+  opacity: 1;
 
   transition: border v.$theme-toggle-transition-duration ease,
     opacity 800ms linear, transform 800ms ease;
 }
 
-.button-container-up {
+.button-container-before-up {
+  opacity: 0;
   transform: translateY(-10rem);
 }
 
-.button-container-down {
+.button-container-before-down {
+  opacity: 0;
   transform: translateY(10rem);
 }
 
-.button-container-left {
+.button-container-before-left {
+  opacity: 0;
   transform: translateX(-10rem);
 }
 
-.button-container-right {
+.button-container-before-right {
+  opacity: 0;
   transform: translateX(10rem);
 }
 
-.button-container-stationary {
+.button-container-before-stationary {
+  opacity: 0;
   transform: translate(0, 0);
 }
 
-.button-container-visible {
+.button-container-after {
   opacity: 1;
-  transform: translateX(0);
+  transform: translate(0, 0);
 }
 
 .button-container-dark {
