--- a/src/components/SkillBox/SkillBox.module.scss
+++ b/src/components/SkillBox/SkillBox.module.scss
@@ -13,7 +13,7 @@
   opacity: 0;
   transform: translateY(5rem);
 
-  transition: opacity 800ms ease, transform 800ms ease;
+  transition: opacity 800ms linear, transform 800ms ease;
 }
 
 .skill-box-light {
