--- a/src/components/Button/Button.module.scss
+++ b/src/components/Button/Button.module.scss
@@ -189,3 +189,21 @@
     font-size: max(0.6rem, min(1.5vw, 1.2rem));
   }
 }
+
+@media (min-width: 768px) and (max-height: 850px) {
+  .button-container-resizeable {
+    font-size: max(0.6rem, min(1.2vw, 1rem));
+  }
+  .button-resizeable {
+    font-size: max(0.6rem, min(1.2vw, 1rem));
+  }
+}
+
+@media (min-width: 768px) and (max-height: 750px) {
+  .button-container-resizeable {
+    font-size: 0.8rem;
+  }
+  .button-resizeable {
+    font-size: 0.8rem;
+  }
+}
