--- a/src/components/Project/Project.module.scss
+++ b/src/components/Project/Project.module.scss
@@ -97,6 +97,33 @@
   }
 }
 
+@media (min-width: 950px) and (max-height: 850px) {
+  .title {
+    font-size: 1.4rem;
+  }
+  .inner-content {
+    gap: 0.5rem;
+  }
+}
+
+@media (min-width: 1275px) and (max-height: 850px) {
+  .title {
+    font-size: 1.8rem;
+  }
+  .inner-content {
+    gap: 0.5rem;
+  }
+}
+
+@media (min-width: 768px) and (max-height: 750px) {
+  .title {
+    font-size: 1.1rem;
+  }
+  .inner-content {
+    gap: 0.5rem;
+  }
+}
+
 @media (max-width: 420px) and (min-height: 850px) {
   .title {
     font-size: 1.1rem;
