--- a/src/components/Projects/Projects.module.scss
+++ b/src/components/Projects/Projects.module.scss
@@ -18,6 +18,7 @@
 @media (max-width: 768px) and (min-height: 850px) {
   .projects {
     grid-template-columns: minmax(auto, 310px);
+
     margin: 2.5rem auto;
   }
 }
@@ -27,5 +28,26 @@
     grid-template-columns: minmax(30vh, 200px);
     gap: 1rem;
     margin: 2.5rem auto;
+  }
+}
+
+@media (min-width: 768px) and (max-height: 850px) {
+  .projects {
+    grid-template-columns: repeat(2, clamp(250px, 58vh, 300px));
+    gap: min(4.2vw, 4.2vh);
+  }
+}
+
+@media (min-width: 950px) and (max-height: 850px) {
+  .projects {
+    grid-template-columns: repeat(2, clamp(250px, 58vh, 400px));
+    gap: min(4.2vw, 4.2vh);
+  }
+}
+
+@media (min-width: 1275px) and (max-height: 850px) {
+  .projects {
+    grid-template-columns: repeat(2, clamp(250px, 58vh, 576px));
+    gap: min(4.2vw, 4.2vh);
   }
 }
