Add svg graphic to introduction and about sections and manually edit the connections between them

--- a/src/partials/_variables.scss
+++ b/src/partials/_variables.scss
@@ -6,7 +6,7 @@ $primary-color-medium-shade: #434351;
 $primary-color-medium: #6f6f89;
 $primary-color-light-shade: #83838c;
 $primary-color-light: #dadae0;
-$primary-color-light-tint: #ececee;
+$primary-color-light-tint: #e6eaf2;
 $primary-color-light-tint-two: #f2f2f3;
 $secondary-color: #5fe88d;
 $secondary-color-two: #c27ba0;
