--- a/src/sections/IntroductionSection/IntroductionSection.module.scss
+++ b/src/sections/IntroductionSection/IntroductionSection.module.scss
@@ -12,6 +12,22 @@
   @include m.color-transition;
 }
 
+.mask {
+  position: absolute;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background: v.$primary-color-dark;
+  z-index: 0;
+
+  transition: height 2000ms linear;
+  transition-delay: 500ms;
+}
+
+.mask-hidden {
+  height: 0;
+}
+
 .introduction-content {
   display: flex;
   flex-direction: column;
@@ -21,7 +37,7 @@
   @include m.section-dimensions;
   width: 50%;
   margin: 0 auto;
-  padding-top: 11rem;
+  padding-top: 10rem;
 }
 
 .introduction-light {
