Fix issue causing DarkLightToggleSwitch to prevent about section transitions

--- a/src/components/Mask/Mask.module.scss
+++ b/src/components/Mask/Mask.module.scss
@@ -10,10 +10,12 @@
 
 .mask-dark {
   background-color: v.$primary-color-dark;
+  // background-color: red;
 }
 
 .mask-light {
   background-color: v.$primary-color-light;
+  // background-color: red;
 }
 
 .mask-unveil-up {
