Dynamically change color of introduction and about section svg graphics depending on theme

--- a/src/components/FormField/FormField.module.scss
+++ b/src/components/FormField/FormField.module.scss
@@ -44,7 +44,7 @@
 
 .field-light {
   background-color: v.$primary-color-light-tint;
-  color: v.$secondary-color-two;
+  color: v.$primary-color-dark-shade;
   caret-color: v.$primary-color-dark-tint;
 
   &::placeholder {
