Add two media query breakpoints for notifications positions and transitions to avoid obscuring important parts of UI

--- a/src/components/LoadingScreen/triangle.scss
+++ b/src/components/LoadingScreen/triangle.scss
@@ -2,13 +2,13 @@
 
 .loading-triangle-svg {
   position: absolute;
-  stroke: v.$secondary-color;
+  stroke: v.$secondary-color-three;
   stroke-width: 3px;
   stroke: transparent;
 }
 
 .loading-triangle-svg-colored {
-  stroke: v.$secondary-color;
+  stroke: v.$secondary-color-three;
 }
 
 .loading-triangle-svg-animated {
