--- a/src/components/LoadingScreen/LoadingScreen.module.scss
+++ b/src/components/LoadingScreen/LoadingScreen.module.scss
@@ -8,14 +8,14 @@
   width: 100vw;
   height: 100vh;
   z-index: 1000;
-  background-color: v.$primary-color-dark;
+  background-color: v.$primary-color-light;
 
   font-size: 5rem;
 }
 
 .logo-letter {
   position: absolute;
-  color: v.$secondary-color;
+  color: v.$secondary-color-three;
   font-family: serif;
   top: 50%;
   transform: translateY(-32%);
