Change primary font from Gochi Hand (cursive) to Mukta (sans-serif)

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,7 +6,9 @@
   height: 100vh;
   overflow-y: hidden;
   scrollbar-width: none;
-  font-family: "Gochi Hand", "cursive";
+  font-family: "Mukta", serif;
+  // font-family: "Gochi Hand", "cursive";
+  line-height: 1.2;
 }
 
 .app-dark {
