Update README with typo fix and additional links

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -6,7 +6,7 @@
   height: 100vh;
   overflow-y: hidden;
   scrollbar-width: none;
-  font-family: "Mukta", serif;
+  font-family: "Mukta", sans-serif;
   // font-family: "Gochi Hand", "cursive";
   line-height: 1.2;
 }
